[gd_scene load_steps=4 format=3 uid="uid://boeov2pangnw1"]

[ext_resource type="Script" path="res://game.gd" id="1_v4tlu"]
[ext_resource type="PackedScene" uid="uid://bpnt7sbv577ni" path="res://main_menu.tscn" id="2_pqyig"]
[ext_resource type="Script" path="res://debug_log.gd" id="2_xhrmk"]

[node name="Game" type="Node"]
script = ExtResource("1_v4tlu")

[node name="Main Menu" parent="." instance=ExtResource("2_pqyig")]

[node name="Debug Log" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Log"
script = ExtResource("2_xhrmk")

[node name="TextEdit" type="TextEdit" parent="Debug Log"]
layout_mode = 2
offset_right = 480.0
offset_bottom = 240.0

[connection signal="request_connect_to_server" from="Main Menu" to="." method="_on_main_menu_request_connect_to_server"]
[connection signal="request_create_new_server" from="Main Menu" to="." method="_on_main_menu_request_create_new_server"]
[connection signal="request_disconnect" from="Main Menu" to="." method="_on_main_menu_request_disconnect"]
